--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "html2pdf.js": "^0.9.3",
     "inngest": "^3.39.1",
     "lucide-react": "^0.514.0",
